--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dbsik
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Harbang@79
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
