Adding AuthController & Login For Authentication

--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,7 @@ _ide_*
 !.vscode/extensions.json
 *.code-workspace
 
+.idea
+.idea/*
+
 # End of https://www.toptal.com/developers/gitignore/api/vscode,laravel
