--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jurosh/pdf-merge": "^2.1",
         "laravel/framework": "^8.0",
+        "laravel/sanctum": "^2.10",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1"
     },
