--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "jurosh/pdf-merge": "^2.1",
+        "laravel/fortify": "1.7.5",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.10",
         "laravel/tinker": "^2.0",
