--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=dbsik
+DB_DATABASE=db_tali_kuat
 DB_USERNAME=root
 DB_PASSWORD=
 
