--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.10",
         "laravel/tinker": "^2.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "org_heigl/ghostscript": "^2.3",
+        "spatie/pdf-to-image": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
