--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "laravel/sanctum": "^2.10",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
-        "org_heigl/ghostscript": "^2.3",
-        "spatie/pdf-to-image": "^2.1"
+        "org_heigl/ghostscript": "^2.3"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
@@ -46,7 +45,6 @@
         "files": [
             "app/Utils/helpers.php",
             "app/Helpers/logActivity.php"
-
         ],
         "psr-4": {
             "App\\": "app/",
